# python-cookiecutter

./: .pre-commit-config.yaml  contributing.html  cookiecutter.json  genindex.html  index.html  infrastructure.html  project_setup.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_build_and _deploy.yml  test.yml
docs/source/: conf.py  project_setup.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
{{cookiecutter.package_name}}/docs/source/: api_index.rst  conf.py
{{cookiecutter.package_name}}/licenses/: BSD-3  MIT
