[project]
name = "python-cookiecutter"
authors = [{ name = "Neuroinformatics Unit" }]
description = "A tool to automatically create a Python project structure ready to release via GitHub and PyPI."
readme = "README.md"
dynamic = ["version"]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

requires-python = ">=3.14"
dependencies = [
    "cookiecutter>=2.6.0",
    "urllib3<2",
    "chardet<6",
    "idna<4",
    "requests<3",
    "pyyaml>=6.0.1", 
]

[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "setuptools-scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
lint.select = ["I", "E", "F"]
fix = true

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
